# edu-course-companion

./: .gitignore  main.py  pyproject.toml
.github/workflows/: terraform.yml
backend/: Dockerfile  cloudbuild.yaml
backend/backend/: settings.py
backend/backend/settings/: common.py  local_database.py
backend/file_processing/: views.py
infrastructure/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf  variables.tf
infrastructure/environments/: deployed.tfvars
infrastructure/modules/cloudbuild/: connectors.tf  triggers.tf  variables.tf
infrastructure/modules/cloudrun-application/: main.tf  outputs.tf  variables.tf
infrastructure/modules/file-processor/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vertex-ai/: main.tf
